Add notebook to test changes in trackcpp and pyaccel.

--- a/test_respmat_meas_sofb.ipynb
+++ b/test_respmat_meas_sofb.ipynb
@@ -25,10 +25,7 @@
     "rcParams.update({'font.size': 16,'lines.linewidth':2})\n",
     "\n",
     "from siriuspy.clientarch import ClientArchiver\n",
-    "from as_ap_sofb.main import SOFB\n",
-    "from as_ap_sofb.correctors import EpicsCorrectors\n",
-    "from as_ap_sofb.matrix import EpicsMatrix\n",
-    "from as_ap_sofb.orbit import EpicsOrbit"
+    "from siriuspy.sofb import SOFB, EpicsCorrectors, EpicsMatrix, EpicsOrbit"
    ]
   },
   {
