DYNAP.ENH: improve testing notebook.

--- a/test_dynap.ipynb
+++ b/test_dynap.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:06:08.815931Z",
-     "start_time": "2020-05-23T21:06:08.813780Z"
+     "end_time": "2020-05-25T17:47:37.817145Z",
+     "start_time": "2020-05-25T17:47:37.749825Z"
     },
     "init_cell": true
    },
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:06:09.323128Z",
-     "start_time": "2020-05-23T21:06:08.818070Z"
+     "end_time": "2020-05-25T17:47:37.889264Z",
+     "start_time": "2020-05-25T17:47:37.818709Z"
     },
     "init_cell": true
    },
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:06:09.581234Z",
-     "start_time": "2020-05-23T21:06:09.324335Z"
+     "end_time": "2020-05-25T17:47:38.204612Z",
+     "start_time": "2020-05-25T17:47:37.893761Z"
     },
     "init_cell": true
    },
@@ -70,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:06:09.585310Z",
-     "start_time": "2020-05-23T21:06:09.582457Z"
+     "end_time": "2020-05-25T17:47:38.208370Z",
+     "start_time": "2020-05-25T17:47:38.205673Z"
     },
     "init_cell": true
    },
@@ -118,7 +118,7 @@
    },
    "outputs": [],
    "source": [
-    "dynap.do_tracking()"
+    "# dynap.do_tracking()"
    ]
   },
   {
@@ -132,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "dynap.process_data()"
+    "# dynap.process_data()"
    ]
   },
   {
@@ -146,18 +146,18 @@
    },
    "outputs": [],
    "source": [
-    "# dynap.save_data('test.pickle')\n",
-    "dynap.load_and_apply('test.pickle')\n",
-    "dynap.process_data()"
+    "# # dynap.save_data('test.pickle')\n",
+    "# dynap.load_and_apply('test.pickle')\n",
+    "# dynap.process_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:11:32.883511Z",
-     "start_time": "2020-05-23T21:11:31.529597Z"
+     "end_time": "2020-05-25T17:47:41.020224Z",
+     "start_time": "2020-05-25T17:47:39.718848Z"
     }
    },
    "outputs": [],
@@ -175,17 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:11:33.260925Z",
-     "start_time": "2020-05-23T21:11:32.958195Z"
+     "end_time": "2020-05-25T17:47:41.911667Z",
+     "start_time": "2020-05-25T17:47:41.788273Z"
     }
    },
    "outputs": [],
    "source": [
-    "f = dynap.make_figure_diffusion(contour=True)\n",
-    "f = dynap.make_figure_diffusion(contour=False)"
+    "f = dynap.make_figure_diffusion(contour=True, orders=[1, 2, 3, ], symmetry=1, intnux=49, intnuy=14)\n",
+    "# f = dynap.make_figure_diffusion(contour=False)"
    ]
   },
   {
@@ -202,16 +202,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:11:55.176417Z",
-     "start_time": "2020-05-23T21:11:55.128761Z"
+     "end_time": "2020-05-25T17:47:47.046271Z",
+     "start_time": "2020-05-25T17:47:46.982067Z"
     }
    },
    "outputs": [],
    "source": [
-    "f = dynap.make_figure_xandy_map_in_tune_plot()"
+    "f = dynap.make_figure_xandy_map_in_tune_plot(orders=[1, 2, 3, ], symmetry=1, intnux=49, intnuy=14)"
    ]
   },
   {
