improve notebooks to test Dynap classes.

--- a/test_dynap.ipynb
+++ b/test_dynap.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:37.817145Z",
-     "start_time": "2020-05-25T17:47:37.749825Z"
+     "end_time": "2020-05-26T22:15:35.113231Z",
+     "start_time": "2020-05-26T22:15:35.016080Z"
     },
     "init_cell": true
    },
@@ -21,8 +21,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:37.889264Z",
-     "start_time": "2020-05-25T17:47:37.818709Z"
+     "end_time": "2020-05-26T22:15:35.206835Z",
+     "start_time": "2020-05-26T22:15:35.114387Z"
     },
     "init_cell": true
    },
@@ -46,16 +46,17 @@
     "import pyaccel\n",
     "import mathphys\n",
     "from pymodels import si\n",
-    "from apsuite.dynap import DynapXY"
+    "from apsuite.dynap import DynapXY\n",
+    "from apsuite.optics_analysis import TuneCorr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:38.204612Z",
-     "start_time": "2020-05-25T17:47:37.893761Z"
+     "end_time": "2020-05-26T22:16:27.902149Z",
+     "start_time": "2020-05-26T22:16:27.681064Z"
     },
     "init_cell": true
    },
@@ -69,11 +70,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:38.208370Z",
-     "start_time": "2020-05-25T17:47:38.205673Z"
+     "end_time": "2020-05-26T19:55:14.787048Z",
+     "start_time": "2020-05-26T19:55:14.261257Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "tunecorr = TuneCorr(model, 'SI')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T19:55:27.664346Z",
+     "start_time": "2020-05-26T19:55:26.837495Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tunecorr.correct_parameters([49.186188, 14.2300])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T19:55:30.746593Z",
+     "start_time": "2020-05-26T19:55:30.667391Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(49.18574477838651, 14.230530180928666)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "twi, _ = pyaccel.optics.calc_twiss(dynap._acc)\n",
+    "twi.mux[-1]/2/np.pi, twi.muy[-1]/2/np.pi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T22:16:29.598718Z",
+     "start_time": "2020-05-26T22:16:29.595763Z"
     },
     "init_cell": true
    },
@@ -84,79 +150,81 @@
      "text": [
       "nrturns      : 512\n",
       "turn_by_turn : True\n",
-      "x_nrpts      : 20\n",
+      "x_nrpts      : 5\n",
       "y_nrpts      : 5\n",
-      "x_min [m]    : -0.01\n",
-      "x_max [m]    : -0.006\n",
+      "x_min [m]    : -0.012\n",
+      "x_max [m]    : 0\n",
       "y_min [m]    : 0\n",
-      "y_max [m]    : 0.001\n",
+      "y_max [m]    : 0.004\n",
       "de_offset    : 0\n",
+      "intnux       : 49.00 (for graphs)\n",
+      "intnuy       : 14.00 (for graphs)\n",
       "\n"
      ]
     }
    ],
    "source": [
     "dynap.params.turn_by_turn = True\n",
-    "dynap.params.x_nrpts = 20\n",
-    "dynap.params.y_nrpts = 5\n",
-    "dynap.params.x_min = -0.010\n",
-    "dynap.params.x_max = -0.006\n",
+    "dynap.params.x_nrpts = 70\n",
+    "dynap.params.y_nrpts = 30\n",
+    "dynap.params.x_min = -0.012\n",
+    "dynap.params.x_max = 0.00\n",
     "dynap.params.y_min = 0\n",
-    "dynap.params.y_max = 0.001\n",
+    "dynap.params.y_max = 0.004\n",
     "print(dynap)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:02:07.840737Z",
-     "start_time": "2020-05-23T21:00:50.788739Z"
+     "end_time": "2020-05-26T22:16:44.123697Z",
+     "start_time": "2020-05-26T22:16:31.754680Z"
     }
    },
    "outputs": [],
    "source": [
-    "# dynap.do_tracking()"
+    "dynap.do_tracking()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:02:10.342084Z",
-     "start_time": "2020-05-23T21:02:10.292561Z"
+     "end_time": "2020-05-26T22:16:45.365225Z",
+     "start_time": "2020-05-26T22:16:45.354689Z"
     }
    },
    "outputs": [],
    "source": [
-    "# dynap.process_data()"
+    "dynap.process_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-23T21:06:13.954562Z",
-     "start_time": "2020-05-23T21:06:13.864359Z"
+     "end_time": "2020-05-26T20:41:56.278990Z",
+     "start_time": "2020-05-26T20:41:55.557171Z"
     }
    },
    "outputs": [],
    "source": [
-    "# # dynap.save_data('test.pickle')\n",
-    "# dynap.load_and_apply('test.pickle')\n",
-    "# dynap.process_data()"
+    "# dynap.save_data('/home/fernando/delta_tune2.pickle')\n",
+    "dynap.load_and_apply('/home/fernando/delta_tune2.pickle')\n",
+    "dynap.process_data()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:41.020224Z",
-     "start_time": "2020-05-25T17:47:39.718848Z"
+     "end_time": "2020-05-26T18:26:23.361839Z",
+     "start_time": "2020-05-26T18:26:22.036497Z"
     }
    },
    "outputs": [],
@@ -174,16 +242,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:41.911667Z",
-     "start_time": "2020-05-25T17:47:41.788273Z"
+     "end_time": "2020-05-26T22:16:49.581735Z",
+     "start_time": "2020-05-26T22:16:49.579073Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "bounds = [\n",
+    "    dynap.params.intnux, dynap.params.intnux + 0.5,\n",
+    "    dynap.params.intnuy, dynap.params.intnuy + 0.5]\n",
+    "orders = [6, ]\n",
+    "symmetry = 1\n",
+    "resons = dynap.calc_resonances_for_bounds(bounds, orders=orders, symmetry=symmetry)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T22:16:50.448548Z",
+     "start_time": "2020-05-26T22:16:50.443234Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 0: (-2, 4, -43)    0\n",
+      " 1: (-1, 1, -35)    0\n",
+      " 2: (-3, 3, -106)    0\n",
+      " 3: (-4, 2, -167)    0\n",
+      " 4: (1, 5, 121)    0\n",
+      " 5: (-3, 0, -148)    0\n",
+      " 6: (-2, 4, -41)    0\n",
+      " 7: (5, 1, 261)    0\n",
+      " 8: (-5, 1, -231)    0\n",
+      " 9: (1, 5, 120)    0\n",
+      "10: (-2, 0, -99)    0\n",
+      "11: (5, 1, 260)    0\n",
+      "12: (-5, 1, -232)    0\n",
+      "13: (3, 0, 148)    0\n",
+      "14: (1, 1, 64)    0\n",
+      "15: (1, 5, 122)    0\n",
+      "16: (3, 3, 191)    0\n",
+      "17: (2, 0, 99)    0\n",
+      "18: (5, 1, 262)    0\n",
+      "19: (3, 3, 190)    0\n",
+      "20: (-2, 1, -85)    0\n",
+      "21: (-5, 1, -233)    0\n",
+      "22: (-1, 2, -20)    0\n",
+      "23: (-4, 2, -169)    0\n",
+      "24: (1, 5, 119)    0\n",
+      "25: (5, 1, 259)    0\n",
+      "26: (-1, 2, -21)    2\n",
+      "27: (-6, 0, -295)    0\n",
+      "28: (-3, 3, -104)    0\n",
+      "29: (0, 6, 85)    1\n",
+      "30: (4, 2, 225)    0\n",
+      "31: (-1, 0, -49)    0\n",
+      "32: (-2, 1, -84)    0\n",
+      "33: (6, 0, 295)    0\n",
+      "34: (1, 1, 63)    0\n",
+      "35: (4, 2, 227)    0\n",
+      "36: (1, 0, 49)    0\n",
+      "37: (2, 4, 155)    1\n",
+      "38: (-1, 5, 22)    0\n",
+      "39: (1, 2, 77)    0\n",
+      "40: (-1, 5, 23)    0\n",
+      "41: (0, 3, 43)    0\n",
+      "42: (0, 1, 14)    0\n",
+      "43: (1, 2, 78)    2\n",
+      "44: (0, 2, 29)    0\n",
+      "45: (2, 4, 157)    0\n",
+      "46: (2, 1, 112)    0\n",
+      "47: (-1, 5, 21)    0\n",
+      "48: (2, 1, 113)    0\n"
+     ]
+    }
+   ],
+   "source": [
+    "map2xy = dynap.map_resons_to_xyplane(resons, maxdist=1e-3)\n",
+    "numb = [x.size for x, _ in map2xy]\n",
+    "for i, (res, nu) in enumerate(zip(resons, numb)):\n",
+    "    print(f'{i:2}: {res}  {nu:3}')\n",
+    "filter_resons = [reson for reson, n in zip(resons, numb) if n > 10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-26T22:16:51.615720Z",
+     "start_time": "2020-05-26T22:16:51.467436Z"
     }
    },
    "outputs": [],
    "source": [
-    "f = dynap.make_figure_diffusion(contour=True, orders=[1, 2, 3, ], symmetry=1, intnux=49, intnuy=14)\n",
+    "f, ax, ay = dynap.make_figure_diffusion(contour=True, resons=resons, maxdist=1e-3)\n",
+    "# f, ax, ay = dynap.make_figure_diffusion(contour=True, resons=filter_resons, maxdist=1e-3)\n",
+    "f.show()\n",
     "# f = dynap.make_figure_diffusion(contour=False)"
    ]
   },
@@ -201,16 +365,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-25T17:47:47.046271Z",
-     "start_time": "2020-05-25T17:47:46.982067Z"
+     "end_time": "2020-05-26T20:44:09.212928Z",
+     "start_time": "2020-05-26T20:44:09.108492Z"
     }
    },
    "outputs": [],
    "source": [
-    "f = dynap.make_figure_xandy_map_in_tune_plot(orders=[1, 2, 3, ], symmetry=1, intnux=49, intnuy=14)"
+    "f = dynap.make_figure_xandy_map_in_tune_plot(resons)"
    ]
   },
   {
