update notebooks for DynapXY and DynapEX test.

--- a/test_dynap.ipynb
+++ b/test_dynap.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:15:35.113231Z",
-     "start_time": "2020-05-26T22:15:35.016080Z"
+     "end_time": "2020-05-29T22:01:11.296925Z",
+     "start_time": "2020-05-29T22:01:11.294713Z"
     },
     "init_cell": true
    },
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:15:35.206835Z",
-     "start_time": "2020-05-26T22:15:35.114387Z"
+     "end_time": "2020-05-29T22:01:13.641100Z",
+     "start_time": "2020-05-29T22:01:11.298630Z"
     },
     "init_cell": true
    },
@@ -52,11 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:16:27.902149Z",
-     "start_time": "2020-05-26T22:16:27.681064Z"
+     "end_time": "2020-05-29T22:01:13.883706Z",
+     "start_time": "2020-05-29T22:01:13.644334Z"
     },
     "init_cell": true
    },
@@ -135,11 +135,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:16:29.598718Z",
-     "start_time": "2020-05-26T22:16:29.595763Z"
+     "end_time": "2020-05-29T22:01:13.887604Z",
+     "start_time": "2020-05-29T22:01:13.884734Z"
     },
     "init_cell": true
    },
@@ -150,13 +150,15 @@
      "text": [
       "nrturns      : 512\n",
       "turn_by_turn : True\n",
-      "x_nrpts      : 5\n",
-      "y_nrpts      : 5\n",
+      "x_nrpts      : 70\n",
+      "y_nrpts      : 30\n",
       "x_min [m]    : -0.012\n",
       "x_max [m]    : 0\n",
       "y_min [m]    : 0\n",
       "y_max [m]    : 0.004\n",
       "de_offset    : 0\n",
+      "xl_off [rad] : 1e-05\n",
+      "yl_off [rad] : 1e-05\n",
       "intnux       : 49.00 (for graphs)\n",
       "intnuy       : 14.00 (for graphs)\n",
       "\n"
@@ -220,11 +222,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T18:26:23.361839Z",
-     "start_time": "2020-05-26T18:26:22.036497Z"
+     "end_time": "2020-05-29T22:01:27.503997Z",
+     "start_time": "2020-05-29T22:01:25.270666Z"
     }
    },
    "outputs": [],
@@ -242,11 +244,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:16:49.581735Z",
-     "start_time": "2020-05-26T22:16:49.579073Z"
+     "end_time": "2020-05-29T22:02:52.841817Z",
+     "start_time": "2020-05-29T22:02:52.828143Z"
     },
     "scrolled": false
    },
@@ -255,18 +257,18 @@
     "bounds = [\n",
     "    dynap.params.intnux, dynap.params.intnux + 0.5,\n",
     "    dynap.params.intnuy, dynap.params.intnuy + 0.5]\n",
-    "orders = [6, ]\n",
+    "orders = 6\n",
     "symmetry = 1\n",
     "resons = dynap.calc_resonances_for_bounds(bounds, orders=orders, symmetry=symmetry)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 35,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:16:50.448548Z",
-     "start_time": "2020-05-26T22:16:50.443234Z"
+     "end_time": "2020-05-29T22:08:25.082535Z",
+     "start_time": "2020-05-29T22:08:25.073411Z"
     }
    },
    "outputs": [
@@ -274,78 +276,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 0: (-2, 4, -43)    0\n",
-      " 1: (-1, 1, -35)    0\n",
-      " 2: (-3, 3, -106)    0\n",
-      " 3: (-4, 2, -167)    0\n",
-      " 4: (1, 5, 121)    0\n",
-      " 5: (-3, 0, -148)    0\n",
-      " 6: (-2, 4, -41)    0\n",
-      " 7: (5, 1, 261)    0\n",
-      " 8: (-5, 1, -231)    0\n",
-      " 9: (1, 5, 120)    0\n",
-      "10: (-2, 0, -99)    0\n",
-      "11: (5, 1, 260)    0\n",
-      "12: (-5, 1, -232)    0\n",
-      "13: (3, 0, 148)    0\n",
-      "14: (1, 1, 64)    0\n",
-      "15: (1, 5, 122)    0\n",
-      "16: (3, 3, 191)    0\n",
-      "17: (2, 0, 99)    0\n",
-      "18: (5, 1, 262)    0\n",
-      "19: (3, 3, 190)    0\n",
-      "20: (-2, 1, -85)    0\n",
-      "21: (-5, 1, -233)    0\n",
-      "22: (-1, 2, -20)    0\n",
-      "23: (-4, 2, -169)    0\n",
-      "24: (1, 5, 119)    0\n",
-      "25: (5, 1, 259)    0\n",
-      "26: (-1, 2, -21)    2\n",
-      "27: (-6, 0, -295)    0\n",
-      "28: (-3, 3, -104)    0\n",
-      "29: (0, 6, 85)    1\n",
-      "30: (4, 2, 225)    0\n",
-      "31: (-1, 0, -49)    0\n",
-      "32: (-2, 1, -84)    0\n",
-      "33: (6, 0, 295)    0\n",
-      "34: (1, 1, 63)    0\n",
-      "35: (4, 2, 227)    0\n",
-      "36: (1, 0, 49)    0\n",
-      "37: (2, 4, 155)    1\n",
-      "38: (-1, 5, 22)    0\n",
-      "39: (1, 2, 77)    0\n",
-      "40: (-1, 5, 23)    0\n",
-      "41: (0, 3, 43)    0\n",
-      "42: (0, 1, 14)    0\n",
-      "43: (1, 2, 78)    2\n",
-      "44: (0, 2, 29)    0\n",
-      "45: (2, 4, 157)    0\n",
-      "46: (2, 1, 112)    0\n",
-      "47: (-1, 5, 21)    0\n",
-      "48: (2, 1, 113)    0\n"
+      "15: (4, 2, 225)   20\n",
+      "19: (2, 4, 155)   17\n",
+      "38: (0, 4, 57)   22\n",
+      "41: (0, 6, 85)   47\n",
+      "52: (-4, 1, -182)   60\n",
+      "63: (3, 3, 190)   17\n",
+      "70: (-2, 1, -84)   35\n",
+      "90: (1, 2, 78)   27\n",
+      "\n",
+      "(4, 2, 225)\n",
+      "(2, 4, 155)\n",
+      "(0, 4, 57)\n",
+      "(0, 6, 85)\n",
+      "(-4, 1, -182)\n",
+      "(3, 3, 190)\n",
+      "(1, 2, 78)\n"
      ]
     }
    ],
    "source": [
-    "map2xy = dynap.map_resons_to_xyplane(resons, maxdist=1e-3)\n",
-    "numb = [x.size for x, _ in map2xy]\n",
+    "map2xy = dynap.map_resons2real_plane(resons, maxdist=2e-3, min_diffusion=1e-5)\n",
+    "numb = [x.size for x in map2xy]\n",
+    "filter_resons = []\n",
     "for i, (res, nu) in enumerate(zip(resons, numb)):\n",
-    "    print(f'{i:2}: {res}  {nu:3}')\n",
-    "filter_resons = [reson for reson, n in zip(resons, numb) if n > 10]"
+    "    if nu > 15:\n",
+    "        print(f'{i:2}: {res}  {nu:3}')\n",
+    "        filter_resons.append(res)\n",
+    "\n",
+    "to_remove = [-2]\n",
+    "for idx in sorted(to_remove, reverse=True):\n",
+    "    del filter_resons[idx]\n",
+    "\n",
+    "print()\n",
+    "for i, reson in enumerate(filter_resons):\n",
+    "    print(f'{reson}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 36,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-26T22:16:51.615720Z",
-     "start_time": "2020-05-26T22:16:51.467436Z"
+     "end_time": "2020-05-29T22:08:26.240848Z",
+     "start_time": "2020-05-29T22:08:26.175730Z"
     }
    },
    "outputs": [],
    "source": [
-    "f, ax, ay = dynap.make_figure_diffusion(contour=True, resons=resons, maxdist=1e-3)\n",
+    "f, ax, ay = dynap.make_figure_diffusion(contour=True, resons=filter_resons, maxdist=5e-3, min_diffusion=1e-5)\n",
     "# f, ax, ay = dynap.make_figure_diffusion(contour=True, resons=filter_resons, maxdist=1e-3)\n",
     "f.show()\n",
     "# f = dynap.make_figure_diffusion(contour=False)"
