fix bugs in calc_bumps notebook.

--- a/calc_bumps.ipynb
+++ b/calc_bumps.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-04T19:44:04.748022Z",
+     "start_time": "2020-06-04T19:44:04.745899Z"
+    },
     "init_cell": true
    },
    "outputs": [],
@@ -14,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T19:36:04.834922Z",
-     "start_time": "2020-06-04T19:36:04.829136Z"
+     "end_time": "2020-06-04T19:44:05.296230Z",
+     "start_time": "2020-06-04T19:44:04.749230Z"
     },
     "init_cell": true
    },
@@ -46,9 +50,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-06-04T20:45:34.758775Z",
+     "start_time": "2020-06-04T20:45:34.746414Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SI-09SA:PS-CH-1\n",
+      "SI-09SA:PS-CV-1\n",
+      "SI-09SA:PS-CH-2\n",
+      "SI-09SA:PS-CV-2\n",
+      "SI-09SA:PS-CH-3\n",
+      "SI-09SA:PS-CV-3\n",
+      "SI-09SA:PS-CH-4\n",
+      "SI-09SA:PS-CV-4\n"
+     ]
+    }
+   ],
    "source": [
     "clt = ConfigDBClient(config_type='si_orbit')\n",
     "\n",
@@ -56,19 +80,22 @@
     "correctorsy = []\n",
     "for idx in range(1, 5):\n",
     "    cname = f'SI-09SA:PS-CH-{idx}'\n",
-    "    correctorsx.append(PowerSupply(cname))\n",
+    "    print(cname)\n",
+    "#     correctorsx.append(PowerSupply(cname))\n",
     "    cname = f'SI-09SA:PS-CV-{idx}'\n",
-    "    correctorsy.append(PowerSupply(cname))"
+    "    print(cname)\n",
+    "#     correctorsy.append(PowerSupply(cname))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T19:37:41.245056Z",
-     "start_time": "2020-06-04T19:37:41.235617Z"
-    }
+     "end_time": "2020-06-04T20:48:49.140561Z",
+     "start_time": "2020-06-04T20:48:49.130269Z"
+    },
+    "init_cell": true
    },
    "outputs": [],
    "source": [
@@ -109,16 +136,8 @@
     "        posx - Horizontal bump offset at straight center in [um].\n",
     "        angy - Vertical bump angle at straight center in [urad].\n",
     "        posy - Vertical bump offset at straight center in [um].\n",
-    "        \n",
-    "    Outputs:\n",
-    "        kicks - correctors strength in [urad].\n",
-    "    \n",
-    "    Geometry:\n",
-    "    >----------------> ebeam direction >---------------->\n",
-    "      C1|C1      C2|C2                     C3|C3      C4|C4\n",
-    "        |---len1---|----len2----|----len2----|---len1---|\n",
     "    \"\"\"\n",
-    "    maxstreng = 32 * 4.8  # maximum corrector strength\n",
+    "    maxkick = 32 * 4.8  # maximum corrector strength\n",
     "    maxdlt = 10  # maximum delta to apply\n",
     "    \n",
     "    kickx0 = np.asarray([c.strength for c in correctorsx])\n",
@@ -152,14 +171,6 @@
     "        posx - Horizontal bump offset at straight center in [um].\n",
     "        angy - Vertical bump angle at straight center in [urad].\n",
     "        posy - Vertical bump offset at straight center in [um].\n",
-    "        \n",
-    "    Outputs:\n",
-    "        corrs - correctors strength in [urad].\n",
-    "    \n",
-    "    Geometry:\n",
-    "    >----------------> ebeam direction >---------------->\n",
-    "      C1|C1      C2|C2                     C3|C3      C4|C4\n",
-    "        |---len1---|----len2----|----len2----|---len1---|\n",
     "    \"\"\"\n",
     "    ss_len = 6.1758 / 2  # distance between BPMs.\n",
     "    bpm_m1 = 8*8 - 1  # SI-09M1:DI-BPM\n",
@@ -181,33 +192,32 @@
     "    orb['y'][bpm_m1] += posy\n",
     "    orb['y'][bpm_m2] += posy\n",
     "    \n",
-    "    clt.insert_config(configname, orb)\n"
+    "    clt.insert_config(configname, orb)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-06-04T19:37:10.980085Z",
-     "start_time": "2020-06-04T19:37:10.976273Z"
+     "end_time": "2020-06-04T21:23:08.853716Z",
+     "start_time": "2020-06-04T21:23:08.848643Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.])"
+       "array([ -88.41876919,  118.41876919, -181.51025182,  151.51025182])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nrsteps = int(0.1//0.2) + 2\n",
-    "np.linspace(0, 1, nrsteps)[1:]"
+    "calc_corr_strength(30, )"
    ]
   },
   {
